# SIC

./: .gitignore  CMakeLists.txt  README.md  main.cpp  withArchives.cpp  withArrays.cpp  withSQL.cpp
SicFpProject/: README.md  main.cpp  mainFp.cpp
SicFpProject/data/: incidencias.csv
SicFpProject/functions/: archivesManager.cpp  consola.cpp  functions.cpp
SicFpProject/include/: archivesManager.h  consola.h  functions.h
files/: incidencias.csv  usuarios.csv
withArrays/: sicArrays.cpp
